@@ -8,15 +8,17 @@ libffi
 
 <h1>The libffi Home Page</h1>
 
+<h3>Note: This page is out of date.  libffi is now largely maintained as part of <a href="http://gcc.gnu.org">GCC</a>.  Hopefully this separate library will be brought up to date some time.  Please contact me if you are interested in helping -- Anthony Green - green@redhat.com</h3>
+
 <b>libffi-1.20</b> was released on October 5, 1998. You can ftp it
 from <a
-href="ftp://sourceware.cygnus.com:/pub/libffi/libffi-1.20.tar.gz">sourceware.cygnus.com:/pub/libffi/libffi-1.20.tar.gz</a>.
+href="ftp://sources.redhat.com:/pub/libffi/libffi-1.20.tar.gz">sources.redhat.com:/pub/libffi/libffi-1.20.tar.gz</a>.
 However, newer code is available.  See below for details.
 
 <p>
 
 libffi is free software.  It has a very <a
-href="http://sourceware.cygnus.com/cgi-bin/cvsweb.cgi/~checkout~/libffi/LICENSE?rev=1.1&cvsroot=libffi&hideattic=1&sortbydate=0">liberal
+href="http://sources.redhat.com/cgi-bin/cvsweb.cgi/~checkout~/libffi/LICENSE?rev=1.1&cvsroot=libffi&hideattic=1&sortbydate=0">liberal
 license</a>.
 
 <h2>What is libffi?</h2>
@@ -79,16 +81,16 @@ that some will be easy (x86 NetBSD), and others will be more difficult
 
 <h2>How to get it</h2>
 
-You can download the latest version from <a href="ftp://sourceware.cygnus.com/pub/libffi/">sourceware.cygnus.com:/pub/libffi/</a>.  
+You can download the latest version from <a href="ftp://sources.redhat.com/pub/libffi/">sources.redhat.com:/pub/libffi/</a>.  
 
 <p>
 
 You can also check out the very latest version via anonymous cvs.
 Here's how:
 <pre>
- cvs -d :pserver:anoncvs@sourceware.cygnus.com:/cvs/libffi login
+ cvs -d :pserver:anoncvs@sources.redhat.com:/cvs/libffi login
      (password is ``anoncvs'')
- cvs -d :pserver:anoncvs@sourceware.cygnus.com:/cvs/libffi co libffi
+ cvs -d :pserver:anoncvs@sources.redhat.com:/cvs/libffi co libffi
 </pre>
 
 Once you have it checked out, you can update it with <tt>cvs update</tt>.
@@ -96,7 +98,7 @@ Once you have it checked out, you can update it with <tt>cvs update</tt>.
 <p>
 
 You can also <a
-href="http://sourceware.cygnus.com/cgi-bin/cvsweb.cgi/libffi/?cvsroot=libffi">
+href="http://sources.redhat.com/cgi-bin/cvsweb.cgi/libffi/?cvsroot=libffi">
 view the cvs archive</a> via cvsweb.
 
 <h2>Mailing lists</h2>
@@ -131,14 +133,14 @@ t" value="Sign me up!">
 
 <h2>Authors and Credits</h2>
 
-Libffi was written by <a href="http://www.cygnus.com/~green/"><b>Anthony Green</b></a>.
+Libffi was written by <a href="http://people.redhat.com/green/"><b>Anthony Green</b></a>.
 
 <ul>
 <li> Portions of libffi were derived from <b>Gianni Mariani</b>'s free gencall
 library for Silicon Graphics machines.
 <li> The sparc port was derived from code contributed by the fine folks at
-<b><a href="http://www.vdi.com">Visible Decisions Inc</a></b>. Further enhancements were made by <b>Gordon Irlam</b> at <a href="http://www.cygnus.com">Cygnus Solutions</a>.
-<li>The Alpha port was written by <b>Richard Henderson</b> at Cygnus Solutions.
+<b><a href="http://www.vdi.com">Visible Decisions Inc</a></b>. Further enhancements were made by <b>Gordon Irlam</b> at Cygnus Solutions (now Red Hat).
+<li>The Alpha port was written by <b>Richard Henderson</b> at Red Hat.
 <li><b>Andreas Schwab</b> ported libffi to m68k Linux and provided a number of
 bug fixes.
 <li><b>Geoffrey Keating</b> ported libffi to the PowerPC.
@@ -153,8 +155,8 @@ interface.
 </ul>
 <p>
 If you have a problem, or have found a bug, please send a note to
-<a href="mailto:libffi-discuss@sourceware.cygnus.com">libffi-discuss@sourceware.cygnus.com</a> or
-to me directly (<a href="mailto:green@cygnus.com">green@cygnus.com</a>).
+<a href="mailto:libffi-discuss@sources.redhat.com">libffi-discuss@sources.redhat.com</a> or
+to me directly (<a href="mailto:green@redhat.com">green@redhat.com</a>).
 
 </body>
 </html>
